--- a/README.Rmd
+++ b/README.Rmd
@@ -19,17 +19,17 @@ require(lattice)
 
 # stp25output2
 
-Die Scripten dienen der Erstellung von Reports als HTML aber auch von PDF ueber knit. Zum Teil handelt es sich um modifizerte Funktionen von R2HTML, texreg und htmlTable.
+The scripts are used to generate reports as HTML, but also PDF via knit. Some of them are modified functions of R2HTML, texreg and htmlTable.
 
 ## Overview
 
--   Initialisiert von neuen Projekten
-    -   `Projekt()` und `End()` Initialisiert ein neues Projekt und aufruf der HTML-Seite mit Hilfe von R2HTML.
--   Text und Tabellen-Formatierung
-    -   `Output` Erstellt Tabellen
-    -   `Text`, `Head` und `Head1 ...` Schreibt HTML Text.
--   Hilfsfunktionen
-    -   `SavePlot` Speichert Bilder in den Arbeitsfolder.
+-   Initialisation of new projects
+    -   `Projekt()` and `End()` Initialises a new project and calls up the HTML page with the help of R2HTML.
+-   Text and table formatting
+    -   `Output` table formatting
+    -   `Text`, `Head` and `Head1 ...` Writes HTML text.
+-   Helper functions
+    -   `SavePlot` Saves images to the working folder.
 
 ## Output formats
 
@@ -48,7 +48,7 @@ Die Scripten dienen der Erstellung von Reports als HTML aber auch von PDF ueber 
 
 ## Projekt
 
-Initialisieren eines Projektes.
+Initialises a new project.
 
 ```{r}
 # devtools::install_github("stp4/stp25output")
